tests/errors/test_65.x
// No such function in module

import "standard.x" as std;

fn main() -> i64 {
    std::log("hello, world!\n");
}